--- a/14_pde/homework/Makefile
+++ b/14_pde/homework/Makefile
@@ -1,2 +1,2 @@
 libcavity: libcavity.cpp
-	g++ -fPIC -shared -O3 -fopenmp libcavity.cpp -o libcavity.so
+	g++ -fPIC -shared -march=native -O3 -fopenmp libcavity.cpp -o libcavity.so
